--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-html, body, canvas {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	overflow: hidden;
-	margin: 0;
-	padding: 0;
+@media only screen and (max-device-width: 480px) {
+	html, body, canvas {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		overflow: hidden;
+		margin: 0;
+		padding: 0;
+	}
 }
